--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
                         </div>
                         <div class="infocart_right_info_left_box">
                             <div class="infocart_right_info_left_box_title">web-site:</div>
-                            <div class="infocart_right_info_left_box_desc">Русский</div>
+                            <div class="infocart_right_info_left_box_desc"><a
+                                    href="http://kartochka.your-chinese.ru/info.php">Карточка</a></div>
                         </div>
                     </div>
                 </div>
@@ -44,29 +45,71 @@
         </div>
         <div class="skills">Навыки</div>
         <div class="skills_info">
-            <div class="skills_info_box">
-                <div class="skills_info_html"></div>
-                <div class="skills_info_title">HTML & CSS</div>
+            <div class="skills_info_box_mid">
+                <div class="skills_info_box_mid_left">
+                    <div class="skills_info_box_mid_left_info">
+                        <p>HTML & CSS</p>
+                        <p>70%</p>
+                    </div>
+                    <div class="skills_info_box_mid_left_html_bar"></div>
+                </div>
+                <div class="skills_info_box_mid_left">
+                    <div class="skills_info_box_mid_left_info">
+                        <p>JavaScript</p>
+                        <p>40%</p>
+                    </div>
+                    <div class="skills_info_box_mid_left_javascript_bar"></div>
+                </div>
+                <div class="skills_info_box_mid_left">
+                    <div class="skills_info_box_mid_left_info">
+                        <p>PHP Laravel</p>
+                        <p>40%</p>
+                    </div>
+                    <div class="skills_info_box_mid_left_laravel_bar"></div>
+                </div>
+                <div class="skills_info_box_mid_left">
+                    <div class="skills_info_box_mid_left_info">
+                        <p>Python Django</p>
+                        <p>40%</p>
+                    </div>
+                    <div class="skills_info_box_mid_left_python_bar"></div>
+                </div>
+                <div class="skills_info_box_mid_left">
+                    <div class="skills_info_box_mid_left_info">
+                        <p>React</p>
+                        <p>20%</p>
+                    </div>
+                    <div class="skills_info_box_mid_left_react_bar"></div>
+                </div>
+                <div class="skills_info_box_mid_left">
+                    <div class="skills_info_box_mid_left_info">
+                        <p>MySql</p>
+                        <p>30%</p>
+                    </div>
+                    <div class="skills_info_box_mid_left_mysql_bar"></div>
+                </div>
+                <div class="skills_info_box_mid_right"></div>
             </div>
-            <div class="skills_info_box">
-                <div class="skills_info_javascript"></div>
-                <div class="skills_info_title">JavaScript</div>
-            </div>
-            <div class="skills_info_box">
-                <div class="skills_info_laravel"></div>
-                <div class="skills_info_title">PHP Laravel</div>
-            </div>
-            <div class="skills_info_box">
-                <div class="skills_info_python"></div>
-                <div class="skills_info_title">Python Django</div>
-            </div>
-            <div class="skills_info_box">
-                <div class="skills_info_react"></div>
-                <div class="skills_info_title">React</div>
-            </div>
-            <div class="skills_info_box">
-                <div class="skills_info_mysql"></div>
-                <div class="skills_info_title">MySql</div>
+            <div class="skills_info_bot">
+                <div class="skills_info_top">
+                    <div class="skills_info_box">
+                        <div class="skills_info_responsible"></div>
+                        <div class="skills_info_title">Отвественный</div>
+                    </div>
+                    <div class="skills_info_box">
+                        <div class="skills_info_sociable"></div>
+                        <div class="skills_info_title">Коммуникабельный</div>
+                    </div>
+                    <div class="skills_info_box">
+                        <div class="skills_info_english"></div>
+                        <div class="skills_info_title">English</div>
+                    </div>
+                </div>
+                <div class="skills_info_bot_box">
+                    <div class="skills_info_bot_box_python">
+                        <p>пример сайта на Python</p>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
