--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
                         <div class="infocart_right_info_left_box">
                             <div class="infocart_right_info_left_box_title">web-site:</div>
                             <div class="infocart_right_info_left_box_desc"><a
-                                    href="http://kartochka.your-chinese.ru/info.php">Карточка</a></div>
+                                    href="http://kartochka.your-chinese.ru/info.php" class="link_coral">Карточка</a>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -107,9 +108,40 @@
                 </div>
                 <div class="skills_info_bot_box">
                     <div class="skills_info_bot_box_python">
-                        <p>пример сайта на Python</p>
+                        <p>пример сайта на <a href="http://kartochka.your-chinese.ru/info.php" target="_blank"
+                                class="link_coral">Python
+                                Django</a></p>
+                        <p>пример сайта на <a href="http://kartochka.your-chinese.ru/info.php" target="_blank"
+                                class="link_coral">PHP
+                                Laravel</a></p>
+                    </div>
+                    <div class="auth">
+                        <div class="auth_t">логин: <p class="auth_text">&nbsp;admin</p>
+                        </div>
+                        <div class="auth_t">пароль: <p class="auth_text">&nbsp;admin</p>
+                        </div>
                     </div>
                 </div>
+            </div>
+        </div>
+        <div class="education">
+            Обучение
+        </div>
+        <div class="education_info">
+            <div class="education_info_box">
+                <div class="education_info_box_date">2022</div>
+                <div class="education_info_box_title">full Stack Developer</div>
+                <div class="education_info_box_desc">dlfk/gmnflgbmldfkmngb</div>
+            </div>
+            <div class="education_info_box">
+                <div class="education_info_box_date">2017 - 2022</div>
+                <div class="education_info_box_title">full Stack Developer</div>
+                <div class="education_info_box_desc">dlfk/gmnflgbmldfkmngb</div>
+            </div>
+            <div class="education_info_box">
+                <div class="education_info_box_date">2010 - 2017</div>
+                <div class="education_info_box_title">full Stack Developer</div>
+                <div class="education_info_box_desc">dlfk/gmnflgbmldfkmngb</div>
             </div>
         </div>
     </div>
