--- a/index.html
+++ b/index.html
@@ -89,6 +89,13 @@
                     </div>
                     <div class="skills_info_box_mid_left_mysql_bar"></div>
                 </div>
+                <div class="skills_info_box_mid_left">
+                    <div class="skills_info_box_mid_left_info">
+                        <p>GIT</p>
+                        <p>50%</p>
+                    </div>
+                    <div class="skills_info_box_mid_left_git_bar"></div>
+                </div>
                 <div class="skills_info_box_mid_right"></div>
             </div>
             <div class="skills_info_bot">
@@ -129,19 +136,70 @@
         </div>
         <div class="education_info">
             <div class="education_info_box">
-                <div class="education_info_box_date">2022</div>
-                <div class="education_info_box_title">full Stack Developer</div>
-                <div class="education_info_box_desc">dlfk/gmnflgbmldfkmngb</div>
+                <div class="education_info_box_date">2024</div>
+                <div class="education_info_box_title">PHP — Laravel</div>
+                <div class="education_info_box_desc">
+                    Окончил курс «Продвинутое программирование на PHP — Laravel»
+                </div>
+                <div class="education_info_box_sertificat">
+                    <a href="./img/Laravel.pdf" target="_blank"
+                        class="education_info_box_sertificat_text">Сертификат</a>
+                </div>
             </div>
             <div class="education_info_box">
-                <div class="education_info_box_date">2017 - 2022</div>
-                <div class="education_info_box_title">full Stack Developer</div>
-                <div class="education_info_box_desc">dlfk/gmnflgbmldfkmngb</div>
+                <div class="education_info_box_date">2024</div>
+                <div class="education_info_box_title">React JS</div>
+                <div class="education_info_box_desc">
+                    Окончил курс «Фреймворк React JS (лекции)»
+                </div>
+                <div class="education_info_box_sertificat">
+                    <a href="./img/React_JS.pdf" target="_blank"
+                        class="education_info_box_sertificat_text">Сертификат</a>
+                </div>
             </div>
             <div class="education_info_box">
-                <div class="education_info_box_date">2010 - 2017</div>
-                <div class="education_info_box_title">full Stack Developer</div>
-                <div class="education_info_box_desc">dlfk/gmnflgbmldfkmngb</div>
+                <div class="education_info_box_date">2024</div>
+                <div class="education_info_box_title">Javascript»</div>
+                <div class="education_info_box_desc">
+                    Окончил курс «Основы Javascript»
+                </div>
+                <div class="education_info_box_sertificat">
+                    <a href="./img/Javascript.pdf" target="_blank"
+                        class="education_info_box_sertificat_text">Сертификат</a>
+                </div>
+            </div>
+            <div class="education_info_box">
+                <div class="education_info_box_date">2024</div>
+                <div class="education_info_box_title">SQL</div>
+                <div class="education_info_box_desc">
+                    Окончил курс «Базы данных и SQL (лекции)»
+                </div>
+                <div class="education_info_box_sertificat">
+                    <a href="./img/SQL.pdf" target="_blank"
+                        class="education_info_box_sertificat_text">Сертификат</a>
+                </div>
+            </div>
+            <div class="education_info_box">
+                <div class="education_info_box_date">2023</div>
+                <div class="education_info_box_title">HTML/CSS</div>
+                <div class="education_info_box_desc">
+                    Окончил курс «Веб-вёрстка HTML/CSS (лекции)»
+                </div>
+                <div class="education_info_box_sertificat">
+                    <a href="./img/HTML.pdf" target="_blank"
+                        class="education_info_box_sertificat_text">Сертификат</a>
+                </div>
+            </div>
+            <div class="education_info_box">
+                <div class="education_info_box_date">2023</div>
+                <div class="education_info_box_title">GIT</div>
+                <div class="education_info_box_desc">
+                    Окончил курс «Контроль версий углублённо (GIT) (лекции)»
+                </div>
+                <div class="education_info_box_sertificat">
+                    <a href="./img/GIT.pdf" target="_blank"
+                        class="education_info_box_sertificat_text">Сертификат</a>
+                </div>
             </div>
         </div>
     </div>
