--- a/index.html
+++ b/index.html
@@ -15,9 +15,13 @@
                 photo
             </div>
             <div class="infocart_right">
-                <div class="infocart_right_name">Name</div>
-                <div class="infocart_right_specialisation">Full Stack</div>
-                <div class="infocart_right_desc">Hello ...</div>
+                <div class="infocart_right_name">Леднев Сергей</div>
+                <div class="infocart_right_specialisation">Full-Stack</div>
+                <div class="infocart_right_desc">Готов обучаться, развиваться в большей степени по направлению
+                    Python, очень понравился этот язык, ранее уже создавал сайт на Django + SQL + панель управление,
+                    нужен сервер чтобы запустить проект, но у меня его нету, при собеседовании могу продемонстрировать,
+                    сайт имеет направление "Интернет магазин" с минимальным функционалом, так же имеется опыт по работе
+                    с Laravel 10.</div>
                 <div class="infocart_right_info">
                     <div class="infocart_right_info_left">
                         <div class="infocart_right_info_left_box">
@@ -26,13 +30,13 @@
                         </div>
                         <div class="infocart_right_info_left_box">
                             <div class="infocart_right_info_left_box_title">Адрес:</div>
-                            <div class="infocart_right_info_left_box_desc">Вологодская обл. пос. Шексна</div>
+                            <div class="infocart_right_info_left_box_desc">Вологодская область</div>
                         </div>
                     </div>
                     <div class="infocart_right_info_right">
                         <div class="infocart_right_info_left_box">
                             <div class="infocart_right_info_left_box_title">E-mail:</div>
-                            <div class="infocart_right_info_left_box_desc">stech999@ya.ru</div>
+                            <div class="infocart_right_info_left_box_desc">email@info.ru</div>
                         </div>
                         <div class="infocart_right_info_left_box">
                             <div class="infocart_right_info_left_box_title">web-site:</div>
@@ -113,7 +117,7 @@
                         <div class="skills_info_title">English</div>
                     </div>
                 </div>
-                <div class="skills_info_bot_box">
+                <!-- <div class="skills_info_bot_box">
                     <div class="skills_info_bot_box_python">
                         <p>пример сайта на <a href="http://kartochka.your-chinese.ru/info.php" target="_blank"
                                 class="link_coral">Python
@@ -128,7 +132,7 @@
                         <div class="auth_t">пароль: <p class="auth_text">&nbsp;admin</p>
                         </div>
                     </div>
-                </div>
+                </div> -->
             </div>
         </div>
         <div class="education">
@@ -175,8 +179,7 @@
                     Окончил курс «Базы данных и SQL (лекции)»
                 </div>
                 <div class="education_info_box_sertificat">
-                    <a href="./img/SQL.pdf" target="_blank"
-                        class="education_info_box_sertificat_text">Сертификат</a>
+                    <a href="./img/SQL.pdf" target="_blank" class="education_info_box_sertificat_text">Сертификат</a>
                 </div>
             </div>
             <div class="education_info_box">
@@ -186,8 +189,7 @@
                     Окончил курс «Веб-вёрстка HTML/CSS (лекции)»
                 </div>
                 <div class="education_info_box_sertificat">
-                    <a href="./img/HTML.pdf" target="_blank"
-                        class="education_info_box_sertificat_text">Сертификат</a>
+                    <a href="./img/HTML.pdf" target="_blank" class="education_info_box_sertificat_text">Сертификат</a>
                 </div>
             </div>
             <div class="education_info_box">
@@ -197,8 +199,7 @@
                     Окончил курс «Контроль версий углублённо (GIT) (лекции)»
                 </div>
                 <div class="education_info_box_sertificat">
-                    <a href="./img/GIT.pdf" target="_blank"
-                        class="education_info_box_sertificat_text">Сертификат</a>
+                    <a href="./img/GIT.pdf" target="_blank" class="education_info_box_sertificat_text">Сертификат</a>
                 </div>
             </div>
         </div>
