--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
                 <div class="infocart_right_name">Леднев Сергей</div>
                 <div class="infocart_right_specialisation">Full-Stack</div>
                 <div class="infocart_right_desc">Готов обучаться, развиваться в большей степени по направлению
-                    Python, очень понравился этот язык, ранее уже создавал сайт на Django + SQL + панель управление,
+                    Python, очень понравился этот язык, ранее был опыт по созданию сайта на Django + SQL + панель
+                    управление,
                     нужен сервер чтобы запустить проект, но у меня его нету, при собеседовании могу продемонстрировать,
                     сайт имеет направление "Интернет магазин" с минимальным функционалом, так же имеется опыт по работе
                     с Laravel 10.</div>
@@ -36,19 +37,23 @@
                     <div class="infocart_right_info_right">
                         <div class="infocart_right_info_left_box">
                             <div class="infocart_right_info_left_box_title">E-mail:</div>
-                            <div class="infocart_right_info_left_box_desc">email@info.ru</div>
+                            <div class="infocart_right_info_left_box_desc">stech999@ya.ru</div>
                         </div>
                         <div class="infocart_right_info_left_box">
-                            <div class="infocart_right_info_left_box_title">web-site:</div>
-                            <div class="infocart_right_info_left_box_desc"><a
-                                    href="http://kartochka.your-chinese.ru/info.php" class="link_coral">Карточка</a>
-                            </div>
+                            <div class="infocart_right_info_left_box_title">Занятость:</div>
+                            <div class="infocart_right_info_left_box_desc">Полная занятость</div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-        <div class="skills">Навыки</div>
+        <div class="otstup_top"></div>
+        <div class="skills_line_box">
+            <div class="skills_line_left"></div>
+            <div class="skills">Навыки</div>
+            <div class="skills_line_right"></div>
+        </div>
+        <div class="otstup_bot"></div>
         <div class="skills_info">
             <div class="skills_info_box_mid">
                 <div class="skills_info_box_mid_left">
@@ -135,8 +140,12 @@
                 </div> -->
             </div>
         </div>
-        <div class="education">
-            Обучение
+        <div class="line_box">
+            <div class="line_left"></div>
+            <div class="education">
+                Обучение
+            </div>
+            <div class="line_right"></div>
         </div>
         <div class="education_info">
             <div class="education_info_box">
