--- a/index.html
+++ b/index.html
@@ -12,12 +12,17 @@
     <div class="center">
         <div class="infocart">
             <div class="infocart_left">
-                photo
+                <img src="./img/photo1.jpg" alt="photo1" class="img_ph">
             </div>
             <div class="infocart_right">
-                <div class="infocart_right_name">Name</div>
-                <div class="infocart_right_specialisation">Full Stack</div>
-                <div class="infocart_right_desc">Hello ...</div>
+                <div class="infocart_right_name">Леднев Сергей</div>
+                <div class="infocart_right_specialisation">Full-Stack</div>
+                <div class="infocart_right_desc">Готов обучаться, развиваться в большей степени по направлению
+                    Python, очень понравился этот язык, ранее был опыт по созданию сайта на Django + SQL + панель
+                    управление,
+                    нужен сервер чтобы запустить проект, но у меня его нету, при собеседовании могу продемонстрировать,
+                    сайт имеет направление "Интернет магазин" с минимальным функционалом, так же имеется опыт по работе
+                    с Laravel 10.</div>
                 <div class="infocart_right_info">
                     <div class="infocart_right_info_left">
                         <div class="infocart_right_info_left_box">
@@ -26,7 +31,7 @@
                         </div>
                         <div class="infocart_right_info_left_box">
                             <div class="infocart_right_info_left_box_title">Адрес:</div>
-                            <div class="infocart_right_info_left_box_desc">Вологодская обл. пос. Шексна</div>
+                            <div class="infocart_right_info_left_box_desc">Вологодская область</div>
                         </div>
                     </div>
                     <div class="infocart_right_info_right">
@@ -35,16 +40,20 @@
                             <div class="infocart_right_info_left_box_desc">stech999@ya.ru</div>
                         </div>
                         <div class="infocart_right_info_left_box">
-                            <div class="infocart_right_info_left_box_title">web-site:</div>
-                            <div class="infocart_right_info_left_box_desc"><a
-                                    href="http://kartochka.your-chinese.ru/info.php" class="link_coral">Карточка</a>
-                            </div>
+                            <div class="infocart_right_info_left_box_title">Занятость:</div>
+                            <div class="infocart_right_info_left_box_desc">Полная занятость</div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-        <div class="skills">Навыки</div>
+        <div class="otstup_top"></div>
+        <div class="skills_line_box">
+            <div class="skills_line_left"></div>
+            <div class="skills">Навыки</div>
+            <div class="skills_line_right"></div>
+        </div>
+        <div class="otstup_bot"></div>
         <div class="skills_info">
             <div class="skills_info_box_mid">
                 <div class="skills_info_box_mid_left">
@@ -113,7 +122,7 @@
                         <div class="skills_info_title">English</div>
                     </div>
                 </div>
-                <div class="skills_info_bot_box">
+                <!-- <div class="skills_info_bot_box">
                     <div class="skills_info_bot_box_python">
                         <p>пример сайта на <a href="http://kartochka.your-chinese.ru/info.php" target="_blank"
                                 class="link_coral">Python
@@ -128,11 +137,15 @@
                         <div class="auth_t">пароль: <p class="auth_text">&nbsp;admin</p>
                         </div>
                     </div>
-                </div>
+                </div> -->
             </div>
         </div>
-        <div class="education">
-            Обучение
+        <div class="line_box">
+            <div class="line_left"></div>
+            <div class="education">
+                Обучение
+            </div>
+            <div class="line_right"></div>
         </div>
         <div class="education_info">
             <div class="education_info_box">
@@ -175,8 +188,7 @@
                     Окончил курс «Базы данных и SQL (лекции)»
                 </div>
                 <div class="education_info_box_sertificat">
-                    <a href="./img/SQL.pdf" target="_blank"
-                        class="education_info_box_sertificat_text">Сертификат</a>
+                    <a href="./img/SQL.pdf" target="_blank" class="education_info_box_sertificat_text">Сертификат</a>
                 </div>
             </div>
             <div class="education_info_box">
@@ -186,8 +198,7 @@
                     Окончил курс «Веб-вёрстка HTML/CSS (лекции)»
                 </div>
                 <div class="education_info_box_sertificat">
-                    <a href="./img/HTML.pdf" target="_blank"
-                        class="education_info_box_sertificat_text">Сертификат</a>
+                    <a href="./img/HTML.pdf" target="_blank" class="education_info_box_sertificat_text">Сертификат</a>
                 </div>
             </div>
             <div class="education_info_box">
@@ -197,8 +208,7 @@
                     Окончил курс «Контроль версий углублённо (GIT) (лекции)»
                 </div>
                 <div class="education_info_box_sertificat">
-                    <a href="./img/GIT.pdf" target="_blank"
-                        class="education_info_box_sertificat_text">Сертификат</a>
+                    <a href="./img/GIT.pdf" target="_blank" class="education_info_box_sertificat_text">Сертификат</a>
                 </div>
             </div>
         </div>
