--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="center">
         <div class="infocart">
             <div class="infocart_left">
-                photo
+                <img src="./img/photo1.jpg" alt="photo1" class="img_ph">
             </div>
             <div class="infocart_right">
                 <div class="infocart_right_name">Леднев Сергей</div>
