--- a/index.html
+++ b/index.html
@@ -118,26 +118,23 @@
                         <div class="skills_info_title">Коммуникабельный</div>
                     </div>
                     <div class="skills_info_box">
-                        <div class="skills_info_english"></div>
-                        <div class="skills_info_title">English</div>
+                        <div class="skills_info_training"></div>
+                        <div class="skills_info_title">Обучение</div>
+                    </div>
+                    <div class="skills_info_box">
+                        <div class="skills_info_purposefulness"></div>
+                        <div class="skills_info_title">Целеустремленность</div>
+                    </div>
+                    <div class="skills_info_box">
+                        <div class="skills_info_flexibility"></div>
+                        <div class="skills_info_title">Гибкость</div>
+                    </div>
+                    <div class="skills_info_box">
+                        <div class="skills_info_Self_discipline"></div>
+                        <div class="skills_info_title">Самодисциплина</div>
                     </div>
                 </div>
-                <!-- <div class="skills_info_bot_box">
-                    <div class="skills_info_bot_box_python">
-                        <p>пример сайта на <a href="http://kartochka.your-chinese.ru/info.php" target="_blank"
-                                class="link_coral">Python
-                                Django</a></p>
-                        <p>пример сайта на <a href="http://kartochka.your-chinese.ru/info.php" target="_blank"
-                                class="link_coral">PHP
-                                Laravel</a></p>
-                    </div>
-                    <div class="auth">
-                        <div class="auth_t">логин: <p class="auth_text">&nbsp;admin</p>
-                        </div>
-                        <div class="auth_t">пароль: <p class="auth_text">&nbsp;admin</p>
-                        </div>
-                    </div>
-                </div> -->
+
             </div>
         </div>
         <div class="line_box">
