--- a/index.html
+++ b/index.html
@@ -200,12 +200,12 @@
             </div>
             <div class="education_info_box">
                 <div class="education_info_box_date">2023</div>
-                <div class="education_info_box_title">GIT</div>
+                <div class="education_info_box_title">Python</div>
                 <div class="education_info_box_desc">
-                    Окончил курс «Контроль версий углублённо (GIT) (лекции)»
+                    Окончил курс «Знакомство с языком Python (лекции)»
                 </div>
                 <div class="education_info_box_sertificat">
-                    <a href="./img/GIT.pdf" target="_blank" class="education_info_box_sertificat_text">Сертификат</a>
+                    <a href="./img/Python.pdf" target="_blank" class="education_info_box_sertificat_text">Сертификат</a>
                 </div>
             </div>
         </div>
