--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
 <body>
     <div class="center">
         <div class="infocart">
-            <div class="infocart_left">
-            </div>
+            <div class="infocart_left"></div>
             <div class="infocart_right">
                 <div class="infocart_right_name">Леднев Сергей</div>
                 <div class="infocart_right_specialisation">Full-Stack</div>
@@ -117,28 +116,6 @@
                         <div class="skills_info_title">Коммуникабельный</div>
                     </div>
                     <div class="skills_info_box">
-<<<<<<< HEAD
-                        <div class="skills_info_english"></div>
-                        <div class="skills_info_title">English</div>
-                    </div>
-                </div>
-                <!-- <div class="skills_info_bot_box">
-                    <div class="skills_info_bot_box_python">
-                        <p>пример сайта на <a href="http://kartochka.your-chinese.ru/info.php" target="_blank"
-                                class="link_coral">Python
-                                Django</a></p>
-                        <p>пример сайта на <a href="http://kartochka.your-chinese.ru/info.php" target="_blank"
-                                class="link_coral">PHP
-                                Laravel</a></p>
-                    </div>
-                    <div class="auth">
-                        <div class="auth_t">логин: <p class="auth_text">&nbsp;admin</p>
-                        </div>
-                        <div class="auth_t">пароль: <p class="auth_text">&nbsp;admin</p>
-                        </div>
-                    </div>
-                </div> -->
-=======
                         <div class="skills_info_training"></div>
                         <div class="skills_info_title">Обучение</div>
                     </div>
@@ -156,7 +133,6 @@
                     </div>
                 </div>
 
->>>>>>> ffcfed157153225324d829097a6c37bf3b8e00ab
             </div>
         </div>
         <div class="line_box">
@@ -227,11 +203,7 @@
                     Окончил курс «Знакомство с языком Python (лекции)»
                 </div>
                 <div class="education_info_box_sertificat">
-<<<<<<< HEAD
-                    <a href="./img/GIT.pdf" target="_blank" class="education_info_box_sertificat_text">Сертификат</a>
-=======
                     <a href="./img/Python.pdf" target="_blank" class="education_info_box_sertificat_text">Сертификат</a>
->>>>>>> ffcfed157153225324d829097a6c37bf3b8e00ab
                 </div>
             </div>
         </div>
