--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
                     управление,
                     нужен сервер чтобы запустить проект, но у меня его нету, при собеседовании могу продемонстрировать,
                     сайт имеет направление "Интернет магазин" с минимальным функционалом, так же имеется опыт по работе
-                    с Laravel 10.</div>
+                    с Laravel 10. <br><br>В последнее время интересуюсь изучением 
+                   <b>ML Engineer / Data Scientist</b> был бы рад присоединиться к команде, которая занимается большими данными и обрабатывает их с помощью библиотек ML для проверки гипотез до внедрения решений и оценки их эффективности, а также внедерением AI-агентов для автоматизации рутинных задач.</div>
                 <div class="infocart_right_info">
                     <div class="infocart_right_info_left">
                         <div class="infocart_right_info_left_box">
@@ -144,14 +145,23 @@
         </div>
         <div class="education_info">
             <div class="education_info_box">
-                <div class="education_info_box_date">2024</div>
-                <div class="education_info_box_title">PHP — Laravel</div>
+                <div class="education_info_box_date">2023</div>
+                <div class="education_info_box_title">Python</div>
                 <div class="education_info_box_desc">
-                    Окончил курс «Продвинутое программирование на PHP — Laravel»
+                    Окончил курс «Знакомство с языком Python (лекции)»
                 </div>
                 <div class="education_info_box_sertificat">
-                    <a href="./img/Laravel.pdf" target="_blank"
-                        class="education_info_box_sertificat_text">Сертификат</a>
+                    <a href="./img/Python.pdf" target="_blank" class="education_info_box_sertificat_text">Сертификат</a>
+                </div>
+            </div>
+            <div class="education_info_box">
+                <div class="education_info_box_date">2023</div>
+                <div class="education_info_box_title">HTML/CSS</div>
+                <div class="education_info_box_desc">
+                    Окончил курс «Веб-вёрстка HTML/CSS (лекции)»
+                </div>
+                <div class="education_info_box_sertificat">
+                    <a href="./img/HTML.pdf" target="_blank" class="education_info_box_sertificat_text">Сертификат</a>
                 </div>
             </div>
             <div class="education_info_box">
@@ -186,24 +196,15 @@
                     <a href="./img/SQL.pdf" target="_blank" class="education_info_box_sertificat_text">Сертификат</a>
                 </div>
             </div>
+            
             <div class="education_info_box">
-                <div class="education_info_box_date">2023</div>
-                <div class="education_info_box_title">HTML/CSS</div>
+                <div class="education_info_box_date">2024</div>
+                <div class="education_info_box_title">PHP — Laravel</div>
                 <div class="education_info_box_desc">
-                    Окончил курс «Веб-вёрстка HTML/CSS (лекции)»
+                    Окончил курс «Продвинутое программирование на PHP — Laravel»
                 </div>
                 <div class="education_info_box_sertificat">
-                    <a href="./img/HTML.pdf" target="_blank" class="education_info_box_sertificat_text">Сертификат</a>
-                </div>
-            </div>
-            <div class="education_info_box">
-                <div class="education_info_box_date">2023</div>
-                <div class="education_info_box_title">Python</div>
-                <div class="education_info_box_desc">
-                    Окончил курс «Знакомство с языком Python (лекции)»
-                </div>
-                <div class="education_info_box_sertificat">
-                    <a href="./img/Python.pdf" target="_blank" class="education_info_box_sertificat_text">Сертификат</a>
+                    <a href="./img/Laravel.pdf" target="_blank" class="education_info_box_sertificat_text">Сертификат</a>
                 </div>
             </div>
         </div>
