--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
                     нужен сервер чтобы запустить проект, но у меня его нету, при собеседовании могу продемонстрировать,
                     сайт имеет направление "Интернет магазин" с минимальным функционалом, так же имеется опыт по работе
                     с Laravel 10. <br><br>В последнее время интересуюсь изучением 
-                   <b>ML Engineer / Data Scientist</b> был бы рад присоединиться к команде, которая занимается большими данными и обрабатывает их с помощью библиотек ML для проверки гипотез до внедрения решений и оценки их эффективности, а также внедерением AI-агентов для автоматизации рутинных задач.</div>
+                   <b>ML Engineer / Data Scientist</b> был бы рад присоединиться к команде, которая занимается большими данными и обрабатывает их с помощью библиотек ML для проверки гипотез до внедрения решений и оценки их эффективности, а также внедерением AI-агентов для автоматизации рутинных задач. <br>
+                Было бы здорово перенять опыт у коллег с большим опытом и как можно скорее приносить пользу для компании.</div>
                 <div class="infocart_right_info">
                     <div class="infocart_right_info_left">
                         <div class="infocart_right_info_left_box">
